Resolve failure of WPT /service-workers/service-worker/Service-Worker-Allowed-header.https.html
Categories
(Core :: DOM: Service Workers, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox67 | --- | fixed |
People
(Reporter: ytausky, Assigned: ytausky)
References
(Blocks 1 open bug)
Details
(Keywords: compat)
Attachments
(1 file)
Two test cases in this suite fail, both involve a Service-Worker-Allowed header whose origin is different than the page's. As far as I can tell from the Update algorithm's step 9, substeps 8-18, only the URL's path is involved in determining whether a given scope can be controlled by the service worker, so Gecko indeed handles this case wrong.
| Assignee | ||
Comment 1•7 years ago
|
||
The spec mandates that only the paths of the URIs resulting from evaluation
of the Service-Worker-Allowed header and the registration's scope be compared,
yet Gecko also includes the origin in the comparison. This commit makes Gecko
follow the spec.
| Assignee | ||
Updated•7 years ago
|
Comment 3•7 years ago
|
||
| bugherder | ||
Comment 4•7 years ago
|
||
Spec behavior is likely changing in https://github.com/w3c/ServiceWorker/issues/1307 under PR https://github.com/w3c/ServiceWorker/pull/1409 to conform to our pre-patch behavior.
Yaron, do you think we should revert the (non-meta parts of the) patch, or refine the post-patch logic?
| Assignee | ||
Comment 5•7 years ago
|
||
We could probably just revert it. It wasn't a complicated change.
Description
•