Bug 1532303: Fix evaluation of Service-Worker-Allowed header r=perry,asuth

The spec mandates that only the paths of the URIs resulting from evaluation
of the Service-Worker-Allowed header and the registration's scope be compared,
yet Gecko also includes the origin in the comparison. This commit makes Gecko
follow the spec.

Differential Revision: https://phabricator.services.mozilla.com/D21970

--HG--
extra : moz-landing-system : lando